# humidity-iot

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-21c2e71a9882c014601893750aded886145954dd0c30c10d68a0b61a46331b33.json  query-2944f2b99e232d2760b32f546aa702865265e117899cb093ceb7300bd0945b41.json  query-34d493e6b2d8d6c3473b317fb7b20e9e897acafdd9798d90d11d0e12f1625acf.json  query-376fa6b8e8531a5a20b5ba01aa0c8ed54a4dfe81ff5b50ce04b4b0fdcee160d4.json  query-3cbfb7f1cdb01260b53d1081f9f4eba6102eeffce8da54328049ff47848f1344.json  query-442bc9d4f214e81657d4eab77a509b91c54653b3e1b7fbe562fdfe52b5abb6c1.json  query-45d20ae7c5d2a2df7809a78c9f07f570e0f75d5117b36cd288abe135e7651826.json  query-4a910bfbfa3c6a9e602c61761d2568b0a4cf271c8db8db47befc8fba9beb76f2.json  query-4aa1d59abd41d7c61be7c3970b48e8f0bf9e703fcfdf6927d1f15e897874c746.json  query-57953f4c8d9f4716de6924afe1c0066cd9b50bd65cef75fdd3c8d4ce9b3203f1.json  query-5f3ed4670539b256bed1c0a6ab99711bcc6d0a6c6137c0a7513f6b1678775a8e.json  query-6cf9d1e65c5205546a60fde119376d8103026d3d7ccc153926100647ff1f807b.json  query-7587d124ce3128712ce69a8089e9453bf34b319e3f519538024a7919859f3feb.json  query-75b2b384e75a81ccf184fc48f6dd1ba2796be38d90966b1fb103dfcfbbc28145.json  query-771d7e75540be74c3605a33fda99948da7a3a610cbe75b3735a6faaf2a134342.json  query-7abd9056c565715e98336ab3ab4c71e0a7e67bda28db510dfcbc8e2f1af47666.json  query-7b2034e395449d8219ea9515ee97b07378105a0a688b1b99e88934881b23d178.json  query-82df2c936f2b3114a1feff9685406fa168ce879e56f760cf73e97786b674241f.json  (+13 more)
backend/src/: main.rs  (+2 more)
(+47 files in other folders)
